# temp_workflow_test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ai-slop-agentic-fix.yml  ai-slop-pr-agentic-fix.lock.yml  ai-slop-pr-agentic-fix.md  ai-slop-pr-analysis.yml  ai-slop-pr-issue-reporter.lock.yml  ai-slop-pr-issue-reporter.md  repo-health-pr-analysis.yml
docs/: repo-health-pr-analysis-gh-aw-draft.md
src/workflow_sample/: __init__.py  ai_slop_fixture.py  processor.py  reporting.py
tests/: test_ai_slop_fixture.py  test_processor.py
